--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# NOTE - NEVER Upload a .env file to Github - this is just a template file as an example.
+
 OPENAI_API_KEY=your_openai_api_key  
 NASA_API_KEY=your_nasa_api_key  
 EXA_API_KEY=your_exa_api_key  
